--- a/news/Views/Home/lstNewestPostOfCategories.cshtml
+++ b/news/Views/Home/lstNewestPostOfCategories.cshtml
@@ -4,7 +4,7 @@
     <!-- Single Featured Post -->
     <div class="single-blog-post small-featured-post d-flex">
         <div class="post-thumb">
-            <a href="@Url.Action("Category", "Home", new { id = item.Catagory.Name})"><img src="~/img/bg-img/@item.ImageURL" alt=""></a>
+            <a href="@Url.Action("Category", "Home", new { id = item.Catagory.Name})"><img src="~/Content/upload/img/news/@item.ImageURL" alt=""></a>
         </div>
         <div class="post-data">
             <a href="@Url.Action("Category", "Home", new { id = item.Catagory.Name})" class="post-catagory">@item.Catagory.Name</a>
