--- a/news/Views/Home/no1News.cshtml
+++ b/news/Views/Home/no1News.cshtml
@@ -15,7 +15,7 @@
 {
     <div class="single-blog-post featured-post">
         <div class="post-thumb">
-            <a href="@Url.Action("Detail", "Home", new { postId = i.Id })"><img src="~/img/bg-img/@i.ImageURL" alt=""></a>
+            <a href="@Url.Action("Detail", "Home", new { postId = i.Id })"><img src="~/Content/upload/img/news/@i.ImageURL" alt=""></a>
         </div>
         <div class="post-data">
             <a href="@Url.Action("Category", "Home", new { id = i.Catagory.Name})" class="post-catagory">@i.Catagory.Name</a>
