--- a/news/Areas/Admin/Views/Posts/Details.cshtml
+++ b/news/Areas/Admin/Views/Posts/Details.cshtml
@@ -6,79 +6,21 @@
 }
 
 
-<h2>Details</h2>
+<h2 class="text-uppercase text-success">Details</h2>
 
 <div>
-    <h4>Post</h4>
+    
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageURL)
-        </dt>
-
+        <h2 class="text-uppercase">@Html.DisplayFor(model => model.Title)</h2>
         <dd>
-            @Html.DisplayFor(model => model.ImageURL)
+            @Html.Raw(Model.Content)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Content)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsBreakingNews)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsBreakingNews)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumOfVisitors)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumOfVisitors)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Catagory.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Catagory.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.FullName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.FullName)
-        </dd>
 
     </dl>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to News", "Index")
 </p>
