--- a/news/Views/Home/getDetail.cshtml
+++ b/news/Views/Home/getDetail.cshtml
@@ -6,7 +6,7 @@
     <div class="col-12 col-md-12">
         <div class="single-blog-post style-3">
             <div class="post-thumb">
-                <a href="@Url.Action("Catagory", "Post", new { id = @i.Catagory.Name})"><img src="~/img/bg-img/@i.ImageURL" alt=""></a>
+                <a href="@Url.Action("Catagory", "Post", new { id = @i.Catagory.Name})"><img src="~/Content/upload/img/news/@i.ImageURL" alt=""></a>
             </div>
             <div class="post-data">
                 <a href="@Url.Action("Category", "Home", new { id = @i.Catagory.Name})" class="post-catagory">@i.Catagory.Name</a>
