--- a/news/Views/Home/liNewsByCategory.cshtml
+++ b/news/Views/Home/liNewsByCategory.cshtml
@@ -13,7 +13,7 @@
             <div class="col-12 col-md-6">
                 <div class="single-blog-post style-3">
                     <div class="post-thumb">
-                        <a href="@Url.Action("Detail", "Home", new { postId = @i.Id})"><img src="~/img/bg-img/@i.ImageURL" alt=""></a>
+                        <a href="@Url.Action("Detail", "Home", new { postId = @i.Id})"><img src="~/Content/upload/img/news/@i.ImageURL" alt=""></a>
                     </div>
                     <div class="post-data">
                         <a href="@Url.Action("Category", "Home", new { id = @i.Catagory.Name})" class="post-catagory">@i.Catagory.Name</a>
