--- a/news/Views/Shared/_Layout.cshtml
+++ b/news/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/Content/_mixin.scss" />
     <link rel="stylesheet" href="~/Content/_responsive.scss" />
     <link rel="stylesheet" href="~/Content/_theme_color.scss" />
+
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
 
@@ -17,6 +18,7 @@
             height: 100%;
         }
     </style>
+    
 </head>
 
 <body>
@@ -35,7 +37,7 @@
                             <!-- Login Search Area -->
                             <div class="login-search-area d-flex align-items-center">
                                 <!-- Search Form -->
-                                
+
                                 <div class="search-form">
                                     <form action="@Url.Action("Search", "Home")" method="get">
                                         <input type="search" name="key" class="form-control" placeholder="Search" required>
@@ -191,22 +193,24 @@
                     </div>
                     <div class="col-12 col-sm-12 col-lg-2">
                         <div class="footer-widget-area mt-80">
-                            <div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=%C4%90%E1%BA%A1i%20H%E1%BB%8Dc%20T%C3%B4n%20%C4%90%E1%BB%A9c%20Th%E1%BA%AFng%2C98%20%C4%90%C6%B0%E1%BB%9Dng%20Ng%C3%B4%20T%E1%BA%A5t%20T%E1%BB%91%2C%20Ph%C6%B0%E1%BB%9Dng%2019%2C%20B%C3%ACnh%20Th%E1%BA%A1nh%2C%20H%E1%BB%93%20Ch%C3%AD%20Minh&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a></div>
-                            <style>
-                                .mapouter {
-                                    position: relative;
-                                    text-align: right;
-                                    height: 400px;
-                                    width: 500px;
-                                }
+                            <div class="mapouter">
+                                <div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=%C4%90%E1%BA%A1i%20H%E1%BB%8Dc%20T%C3%B4n%20%C4%90%E1%BB%A9c%20Th%E1%BA%AFng%2C98%20%C4%90%C6%B0%E1%BB%9Dng%20Ng%C3%B4%20T%E1%BA%A5t%20T%E1%BB%91%2C%20Ph%C6%B0%E1%BB%9Dng%2019%2C%20B%C3%ACnh%20Th%E1%BA%A1nh%2C%20H%E1%BB%93%20Ch%C3%AD%20Minh&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a></div>
+                                <style>
+                                    .mapouter {
+                                        position: relative;
+                                        text-align: right;
+                                        height: 400px;
+                                        width: 500px;
+                                    }
 
-                                .gmap_canvas {
-                                    overflow: hidden;
-                                    background: none !important;
-                                    height: 400px;
-                                    width: 500px;
-                                }
-                            </style></div>
+                                    .gmap_canvas {
+                                        overflow: hidden;
+                                        background: none !important;
+                                        height: 400px;
+                                        width: 500px;
+                                    }
+                                </style>
+                            </div>
                         </div>
                     </div>
                     <!-- Footer Widget Area -->
@@ -244,6 +248,7 @@
             });
         }
     </script>
+    <link rel="stylesheet" href="~/Content/fontawesome.css" />
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpzHEbyHrneO2st4v9Av2leCsCdd_c064&callback=initMap">
     </script>
